# fastnn

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: iOS.cmake
common/: CMakeLists.txt  blob.cpp  blob.h  layer.cpp  layer.h  layer_register.h  mat.cpp  mat.h  memoryAlloc.h  modelbin.cpp  modelbin.h  net.cpp  net.h  paramdict.cpp  paramdict.h
example/squeenzeNet/: squeezeNe.cpp
layer/: CMakeLists.txt  concat.cpp  concat.h  convolution.cpp  convolution.h  dropout.cpp  dropout.h  input.cpp  input.h  pooling.cpp  pooling.h  relu.cpp  relu.h  scale.cpp  scale.h  softmax.cpp  softmax.h  split.cpp  split.h
nnfunc/: general_conv.cpp  general_conv.h
